--- a/src/app/pages/shop/productcheckout/productcheckout.component.html
+++ b/src/app/pages/shop/productcheckout/productcheckout.component.html
@@ -267,6 +267,14 @@
                                           Cash on Delivery
                                         </label>
                                       </div>
+                                      <hr style="margin: 0; margin-bottom: 20px; border-color: lightgray;" />
+                                      <h6>Fast Delivery With In 48 Hours</h6>
+                                      <div class="form-check second_box">
+                                        <input class="form-check-input" type="radio" value="fastdelivery" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault2">
+                                        <label class="form-check-label" for="flexRadioDefault2">
+                                          Fast Delivery
+                                        </label>
+                                      </div>
                                 </div> 
 
                                 <!-- <molla-accordion adClass="accordion-summary" id="accordion-payment">
