--- a/src/app/shared/components/headers/header/header.component.scss
+++ b/src/app/shared/components/headers/header/header.component.scss
@@ -36,12 +36,88 @@
         }
     }
 
+
     .header-bottom {
         background-image: linear-gradient(270deg, #24A4C5 0%, #38B299 25%, #466BAB 65.1%, #4665AC 100%);
         color: white;
 
         .header-center {
             justify-content: center;
+
+            ul.newcat {
+                margin: 0;
+                padding: 0;
+
+                .megamenu-main {
+                    
+                    .megamenu-child {
+                        position: absolute;
+                        width: 95%;
+                        background-color: #fff;
+                        color: #000;
+                        left: 0px;
+                        z-index: 1;
+                        top: 100%;
+                        display: none;
+                        border: 1px solid #d3d3d3;
+                        border-bottom-left-radius: 5px;
+                        border-bottom-right-radius: 5px;
+                        box-shadow: -1px 4px 9px 2px #0003;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        padding: 10px;
+
+                        .div-category {
+                            display: flex;
+                            flex-wrap: wrap;
+                            justify-content: space-between;
+
+                            .menu-cat-image {
+                                padding: 10px;
+                                min-width: 150px;
+                                text-align: center;
+                            }
+                        }
+
+                        .menu-cat-image  {
+                            .image {
+                                max-width: 100px;
+                                background-color: white;
+                                border-radius: 10px;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                flex-wrap: wrap;
+                                margin: auto;
+                                max-width: 75px;
+                                max-height: 75px;
+                                min-height: 75px;
+                            }
+                        }
+                    }
+
+                    .megamenu-child::after {
+                        content: '';
+                        width: 20px;
+                        height: 20px;
+                        background-color: white;
+                        position: absolute;
+                        top: -8px;
+                        left: 27%;
+                        transform: rotateZ(45deg);
+                    }
+                }
+
+                .megamenu-main:hover .megamenu-child {
+                    display: block;
+                }
+
+                li {
+                    display: inline-block;
+                    padding: 15px 20px;
+                    cursor: pointer;
+                }
+            }
         }
 
         .menu {
